// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown correctly mounts Profile, DropdownCourses, and DropdownCreateCourses components when a user is logged in 1`] = `
"<Provider store={{...}}>
  <MemoryRouter>
    <Router basename={[undefined]} location={{...}} navigationType=\\"POP\\" navigator={{...}}>
      <Dropdown>
        <Blueprint4.Popover2 content={{...}} inheritDarkTheme={false} placement=\\"bottom\\" boundary=\\"clippingParents\\" captureDismiss={false} defaultIsOpen={false} disabled={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} interactionKind=\\"click\\" matchTargetWidth={false} minimal={false} openOnTargetFocus={true} positioningStrategy=\\"absolute\\" renderTarget={[undefined]} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true}>
          <Manager>
            <Reference>
              <Blueprint4.ResizeSensor2 targetRef={[Function (anonymous)]} onResize={[Function (anonymous)]}>
                <span aria-haspopup=\\"true\\" className=\\"bp4-popover2-target\\" onClick={[Function (anonymous)]} onKeyDown={[Function: onKeyDown]}>
                  <ControlButton icon=\\"caret-down\\" className=\\"\\" disabled={[undefined]} tabIndex={[undefined]}>
                    <Blueprint4.Button disabled={false} fill={false} intent=\\"none\\" minimal={true} className=\\"\\" type={[undefined]} onClick={[undefined]} icon={{...}} rightIcon={false}>
                      <button type={[undefined]} disabled={false} className=\\"bp4-button bp4-minimal\\" onClick={[undefined]} onBlur={[Function (anonymous)]} onFocus={[undefined]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} tabIndex={[undefined]}>
                        <Blueprint4.Icon icon={{...}}>
                          <Blueprint4.Icon icon=\\"caret-down\\" color={[undefined]}>
                            <span aria-hidden={true} icon=\\"caret-down\\" className=\\"bp4-icon bp4-icon-caret-down\\" title={[undefined]}>
                              <svg fill={[undefined]} data-icon=\\"caret-down\\" width={16} height={16} viewBox=\\"0 0 16 16\\" aria-labelledby={[undefined]} role=\\"img\\">
                                <path d=\\"M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z\\" fillRule=\\"evenodd\\" />
                              </svg>
                            </span>
                          </Blueprint4.Icon>
                        </Blueprint4.Icon>
                        <Blueprint4.Icon icon={false} />
                      </button>
                    </Blueprint4.Button>
                  </ControlButton>
                </span>
              </Blueprint4.ResizeSensor2>
            </Reference>
            <Popper innerRef={[Function (anonymous)]} placement=\\"bottom\\" strategy=\\"absolute\\" modifiers={{...}}>
              <Blueprint4.Overlay autoFocus={true} backdropClassName=\\"bp4-popover2-backdrop\\" backdropProps={{...}} canEscapeKeyClose={true} canOutsideClickClose={true} enforceFocus={true} hasBackdrop={false} isOpen={false} onClose={[Function (anonymous)]} onClosed={[undefined]} onClosing={[undefined]} onOpened={[undefined]} onOpening={[undefined]} transitionDuration={300} transitionName=\\"bp4-popover2\\" usePortal={true} portalClassName={[undefined]} portalContainer={[undefined]} shouldReturnFocusOnClose={false} lazy={true} />
            </Popper>
          </Manager>
        </Blueprint4.Popover2>
        <DropdownSettings isOpen={false} onClose={[Function: toggleSettingsOpen]}>
          <Blueprint4.Dialog className=\\"settings\\" icon=\\"cog\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleSettingsOpen]} title=\\"Settings\\" canOutsideClickClose={true}>
            <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"cog\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleSettingsOpen]} title=\\"Settings\\" canOutsideClickClose={true} hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
          </Blueprint4.Dialog>
        </DropdownSettings>
        <DropdownAbout isOpen={false} onClose={[Function: toggleAboutOpen]}>
          <Blueprint4.Dialog className=\\"about\\" icon=\\"help\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleAboutOpen]} title=\\"About\\" canOutsideClickClose={true}>
            <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"help\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleAboutOpen]} title=\\"About\\" canOutsideClickClose={true} hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
          </Blueprint4.Dialog>
        </DropdownAbout>
        <DropdownHelp isOpen={false} onClose={[Function: toggleHelpOpen]}>
          <Blueprint4.Dialog className=\\"help\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleHelpOpen]} title=\\"Help\\" canOutsideClickClose={true}>
            <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleHelpOpen]} title=\\"Help\\" canOutsideClickClose={true} hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
          </Blueprint4.Dialog>
        </DropdownHelp>
        <DropdownCourses isOpen={false} onClose={[Function: toggleMyCoursesOpen]} courses={{...}} courseId={1}>
          <Blueprint4.Dialog className=\\"my-courses\\" icon=\\"properties\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleMyCoursesOpen]} title=\\"My Courses\\" canOutsideClickClose={true}>
            <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"properties\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleMyCoursesOpen]} title=\\"My Courses\\" canOutsideClickClose={true} hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
          </Blueprint4.Dialog>
        </DropdownCourses>
        <DropdownCreateCourse isOpen={false} onClose={[Function: toggleCreateCourseOpen]}>
          <Blueprint4.Dialog className=\\"create-course\\" icon=\\"add\\" isCloseButtonShown={true} canOutsideClickClose={false} isOpen={false} onClose={[Function: toggleCreateCourseOpen]} title=\\"Create Course\\">
            <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"add\\" isCloseButtonShown={true} canOutsideClickClose={false} isOpen={false} onClose={[Function: toggleCreateCourseOpen]} title=\\"Create Course\\" hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
          </Blueprint4.Dialog>
        </DropdownCreateCourse>
        <Profile isOpen={false} onClose={[Function: toggleProfileOpen]}>
          <Blueprint4.Drawer className=\\"profile\\" icon=\\"user\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleProfileOpen]} title=\\"User Profile\\" position=\\"left\\" size=\\"360px\\" canOutsideClickClose={true} style={{...}}>
            <Blueprint4.Overlay className=\\"bp4-overlay-container\\" icon=\\"user\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleProfileOpen]} title=\\"User Profile\\" position=\\"left\\" size=\\"360px\\" canOutsideClickClose={true} style={{...}} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} hasBackdrop={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
          </Blueprint4.Drawer>
        </Profile>
      </Dropdown>
    </Router>
  </MemoryRouter>
</Provider>"
`;

exports[`Dropdown does not mount Profile, DropdownCourses and DropdownCreateCourses components when a user is not logged in 1`] = `
"<Provider store={{...}}>
  <Dropdown>
    <Blueprint4.Popover2 content={{...}} inheritDarkTheme={false} placement=\\"bottom\\" boundary=\\"clippingParents\\" captureDismiss={false} defaultIsOpen={false} disabled={false} fill={false} hasBackdrop={false} hoverCloseDelay={300} hoverOpenDelay={150} interactionKind=\\"click\\" matchTargetWidth={false} minimal={false} openOnTargetFocus={true} positioningStrategy=\\"absolute\\" renderTarget={[undefined]} shouldReturnFocusOnClose={false} targetTagName=\\"span\\" transitionDuration={300} usePortal={true}>
      <Manager>
        <Reference>
          <Blueprint4.ResizeSensor2 targetRef={[Function (anonymous)]} onResize={[Function (anonymous)]}>
            <span aria-haspopup=\\"true\\" className=\\"bp4-popover2-target\\" onClick={[Function (anonymous)]} onKeyDown={[Function: onKeyDown]}>
              <ControlButton icon=\\"caret-down\\" className=\\"\\" disabled={[undefined]} tabIndex={[undefined]}>
                <Blueprint4.Button disabled={false} fill={false} intent=\\"none\\" minimal={true} className=\\"\\" type={[undefined]} onClick={[undefined]} icon={{...}} rightIcon={false}>
                  <button type={[undefined]} disabled={false} className=\\"bp4-button bp4-minimal\\" onClick={[undefined]} onBlur={[Function (anonymous)]} onFocus={[undefined]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} tabIndex={[undefined]}>
                    <Blueprint4.Icon icon={{...}}>
                      <Blueprint4.Icon icon=\\"caret-down\\" color={[undefined]}>
                        <span aria-hidden={true} icon=\\"caret-down\\" className=\\"bp4-icon bp4-icon-caret-down\\" title={[undefined]}>
                          <svg fill={[undefined]} data-icon=\\"caret-down\\" width={16} height={16} viewBox=\\"0 0 16 16\\" aria-labelledby={[undefined]} role=\\"img\\">
                            <path d=\\"M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z\\" fillRule=\\"evenodd\\" />
                          </svg>
                        </span>
                      </Blueprint4.Icon>
                    </Blueprint4.Icon>
                    <Blueprint4.Icon icon={false} />
                  </button>
                </Blueprint4.Button>
              </ControlButton>
            </span>
          </Blueprint4.ResizeSensor2>
        </Reference>
        <Popper innerRef={[Function (anonymous)]} placement=\\"bottom\\" strategy=\\"absolute\\" modifiers={{...}}>
          <Blueprint4.Overlay autoFocus={true} backdropClassName=\\"bp4-popover2-backdrop\\" backdropProps={{...}} canEscapeKeyClose={true} canOutsideClickClose={true} enforceFocus={true} hasBackdrop={false} isOpen={false} onClose={[Function (anonymous)]} onClosed={[undefined]} onClosing={[undefined]} onOpened={[undefined]} onOpening={[undefined]} transitionDuration={300} transitionName=\\"bp4-popover2\\" usePortal={true} portalClassName={[undefined]} portalContainer={[undefined]} shouldReturnFocusOnClose={false} lazy={true} />
        </Popper>
      </Manager>
    </Blueprint4.Popover2>
    <DropdownSettings isOpen={false} onClose={[Function: toggleSettingsOpen]}>
      <Blueprint4.Dialog className=\\"settings\\" icon=\\"cog\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleSettingsOpen]} title=\\"Settings\\" canOutsideClickClose={true}>
        <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"cog\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleSettingsOpen]} title=\\"Settings\\" canOutsideClickClose={true} hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
      </Blueprint4.Dialog>
    </DropdownSettings>
    <DropdownAbout isOpen={false} onClose={[Function: toggleAboutOpen]}>
      <Blueprint4.Dialog className=\\"about\\" icon=\\"help\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleAboutOpen]} title=\\"About\\" canOutsideClickClose={true}>
        <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"help\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleAboutOpen]} title=\\"About\\" canOutsideClickClose={true} hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
      </Blueprint4.Dialog>
    </DropdownAbout>
    <DropdownHelp isOpen={false} onClose={[Function: toggleHelpOpen]}>
      <Blueprint4.Dialog className=\\"help\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleHelpOpen]} title=\\"Help\\" canOutsideClickClose={true}>
        <Blueprint4.Overlay className=\\"bp4-overlay-scroll-container\\" icon=\\"error\\" isCloseButtonShown={true} isOpen={false} onClose={[Function: toggleHelpOpen]} title=\\"Help\\" canOutsideClickClose={true} hasBackdrop={true} autoFocus={true} backdropProps={{...}} canEscapeKeyClose={true} enforceFocus={true} lazy={true} shouldReturnFocusOnClose={true} transitionDuration={300} transitionName=\\"bp4-overlay\\" usePortal={true} />
      </Blueprint4.Dialog>
    </DropdownHelp>
  </Dropdown>
</Provider>"
`;
